samples/_failures_safe/1761006413_f78e1c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_457ec296.c: In function ‘main’:
./samples/SAFE/__tmp_457ec296.c:146:16: error: missing terminating " character
  146 |         printf("Failed to
      |                ^~~~~~~~~~
./samples/SAFE/__tmp_457ec296.c:146:9: error: expected expression at end of input
  146 |         printf("Failed to
      |         ^~~~~~
./samples/SAFE/__tmp_457ec296.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_457ec296.c:146:9: error: expected declaration or statement at end of input
